# console-get-ip-tool

./: .gitignore  CMakeLists.txt  README.md  get-ip-tool.c  install.ps1  install.sh
.github/workflows/: release-unix.yml  release-windows.yml  release.yml
